# imagedistance

./: .travis.yml  CMakeLists.txt  README.md
include/: imagedistance.hpp
src/: imagedistance.cpp
